Sat Nov 05 23:31:14 GMT 2011  Olly Betts <olly@survex.com>

	* backends/Makefile.mk,backends/brass/brass_database.cc,
	  backends/chert/chert_database.cc,
	  backends/contiguousalldocspostlist.h,common/Makefile.mk,
	  common/contiguousalldocspostlist.h: Move contiguousalldocspostlist.h
	  from common to backends.

Sat Nov 05 23:28:49 GMT 2011  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,backends/Makefile.mk,backends/alltermslist.h,
	  backends/brass/,backends/chert/,
	  backends/inmemory/inmemory_alltermslist.h,common/Makefile.mk,
	  common/alltermslist.h,common/multialltermslist.h: Move alltermslist.h
	  from common to backends.

Sat Nov 05 23:20:05 GMT 2011  Olly Betts <olly@survex.com>

	* common/safesysselect.h: Fix typo (FDSET -> FD_SET).

Sat Nov 05 23:12:09 GMT 2011  Olly Betts <olly@survex.com>

	* common/safesysselect.h: Enhance to provide portability for __WIN32__
	  too.
	* net/remoteconnection.cc,net/tcpclient.cc: Update to make use of this.

Sat Nov 05 22:39:51 GMT 2011  Olly Betts <olly@survex.com>

	* common/safesysselect.h: Add wrapper around FD_SET() under __WIN32__
	  which casts the fd parameter to unsigned to avoid a warning on mingw.
	* net/tcpclient.cc: Remove __WIN32__-specific case here which was
	  working around this warning.

Sat Nov 05 21:58:12 GMT 2011  Olly Betts <olly@survex.com>

	* bin/.gitignore,bin/Makefile.mk,bin/xapian-delve.cc,
	  docs/admin_notes.rst,examples/,xapian-core.spec.in: Move delve from
	  examples to bin and rename to xapian-delve.

Sat Nov 05 15:18:37 GMT 2011  Olly Betts <olly@survex.com>

	* docs/overview.rst: Fix a few things which were out of date and
	  improve wording in various places.

Sat Nov 05 12:07:14 GMT 2011  Olly Betts <olly@survex.com>

	* docs/quickstart.rst: Fix some factual errors, and tweak .rst
	  source layout a little (":\n::\n" -> "::\n").

Thu Nov 03 20:53:49 GMT 2011  Richard Boulton <richard@tartarus.org>

	* common/msvc_posix_wrapper.cc,common/safe.cc,net/tcpclient.cc: