@@ -1,7 +1,7 @@
 /** @file contiguousalldocspostlist.h
  * @brief Iterate all document ids when they form a contiguous range.
  */
-/* Copyright (C) 2007,2008,2009 Olly Betts
+/* Copyright (C) 2007,2008,2009,2011 Olly Betts
  * Copyright (C) 2009 Lemur Consulting Ltd
  *
  * This program is free software; you can redistribute it and/or modify
@@ -25,7 +25,7 @@
 #include <string>
 
 #include "database.h"
-#include "leafpostlist.h"
+#include "api/leafpostlist.h"
 
 /// A PostList iteratating all docids when they form a contiguous range.
 class ContiguousAllDocsPostList : public LeafPostList {
