@@ -2,7 +2,7 @@
  *  @brief Postlists for remote databases
  */
 /* Copyright (C) 2007,2009 Lemur Consulting Ltd
- * Copyright (C) 2007,2008,2009 Olly Betts
+ * Copyright (C) 2007,2008,2009,2011 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -25,7 +25,7 @@
 
 #include <string>
 
-#include "leafpostlist.h"
+#include "api/leafpostlist.h"
 #include "omassert.h"
 #include "remote-database.h"
 
