@@ -2,7 +2,7 @@
  *
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2003,2004,2007 Olly Betts
+ * Copyright 2003,2004,2007,2011 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -24,7 +24,7 @@
 #define OM_HGUARD_BRANCHPOSTLIST_H
 
 #include "multimatch.h"
-#include "postlist.h"
+#include "api/postlist.h"
 
 /** Base class for postlists which are generated by merging two
  *  sub-postlists.
