@@ -1,7 +1,7 @@
 /** @file externalpostlist.h
  * @brief Return document ids from an external source.
  */
-/* Copyright 2008,2009 Olly Betts
+/* Copyright 2008,2009,2011 Olly Betts
  * Copyright 2009 Lemur Consulting Ltd
  *
  * This program is free software; you can redistribute it and/or modify
@@ -22,7 +22,7 @@
 #ifndef XAPIAN_INCLUDED_EXTERNALPOSTLIST_H
 #define XAPIAN_INCLUDED_EXTERNALPOSTLIST_H
 
-#include "postlist.h"
+#include "api/postlist.h"
 
 namespace Xapian {
     class PostingSource;
